# esp32-s3

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  user_config.h
main/App/: app_camera.c  app_desktop.c  app_filesystem.c  app_multidir.c  app_music.c  app_ota.c  app_setting.c  app_statusbar.c  app_ui.c  app_wifi.c
main/App/Inc/: app_camera.h  app_desktop.h  app_filesystem.h  app_multidir.h  app_music.h  app_setting.h  app_statusbar.h  app_ui.h  app_wifi.h
main/Bsp/: camera.c  extend_io.c  i2c.c  key.c  lcd.c  music.c  qmi8658.c  sdcard.c  wifi.c
main/Bsp/Inc/: Bsp.h  camera.h  extend_io.h  i2c.h  key.h  lcd.h  music.h  qmi8658.h  sdcard.h  wifi.h
main/Dev/: dev_registry.c
main/Dev/Inc/: dev_registry.h
main/img/: camera.c  filesystem.c  music.c  setting.c  wifi.c
