idf_component_register(SRCS "main.c" 
                            "Bsp/i2c.c" 
                            "Bsp/lcd.c" 
                            "Bsp/extend_io.c" 
                            "Bsp/wifi.c" 
                            "Bsp/camera.c" 
                            "Bsp/qmi8658.c"
                            "Bsp/sdcard.c"
                            "App/app_ui.c"
                            "App/app_wifi.c"
                            "App/app_desktop.c"
                            "App/app_statusbar.c"
                            "App/app_camera.c"
                            "App/app_setting.c"
                            "App/app_filesystem.c"
                            "Dev/dev_registry.c"
                            "img/setting.c"
                            "img/camera.c"
                            "img/wifi.c"
                            "img/filesystem.c"
                            "Font/font_alipuhui18.c"
                    PRIV_REQUIRES spi_flash nvs_flash esp_wifi fatfs
                    INCLUDE_DIRS "." "./App" "./Bsp" "./Dev" "./Font")
